k3s_cluster/base/default/netboot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
  labels:
    app: main-netboot
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`netboot.default.home`)
      middlewares:
        - name: default-middleware-auth-authentik
      services:
        - name: default-netboot-service
          port: 6680
